# IcarianEngine

./: .gitignore  .gitmodules  3RD-PARTY SOURCES.md  BuildBase.h  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.c  build.sh  buildDebug.sh  buildWithSymbols.sh  clean.sh  crossWinBuild.sh  crossWinSetup.sh  setup.bat  setup.sh
EngineInterop/: EngineAmbientLightInteropStructures.h  EngineAnimationClipInteropStructures.h  EngineAudioClipInterop.h  (+51 more)
FlareBase/: BuildFlareBase.h  CMakeLists.txt  FlareBaseConfig.h.in
FlareBase/include/: .gitignore
FlareBase/include/Flare/: Bones.h  ColladaLoader.h  FBXLoader.h  GLTFLoader.h  IPCPipe.h  IcarianAssert.h  IcarianDefer.h  InputBindings.h  MonoNativeImpl.h  OBJLoader.h  PipeMessage.h  RenderProgram.h  ShaderBufferInput.h  TextureSampler.h  Vertices.h  WindowsHeaders.h
FlareBase/src/: ColladaLoader.cpp  FBXLoader.cpp  GLTFLoader.cpp  IPCPipe.cpp  InputBindings.cpp  MonoNativeImpl.cpp  OBJLoader.cpp
IcarianNative/: BuildIcarianNative.h  CMakeLists.txt  IcarianNativeConfig.h.in  config.xml.in
IcarianNative/include/: .gitignore  Application.h  AssetLibrary.h  Config.h  DeletionQueue.h  FileCache.h  Frustum.h  GamePad.h  IcarianError.h  InputManager.h  LibXInput.h  Logger.h  ObjectManager.h  Profiler.h  Random.h  RuntimeThreadJob.h  Scribe.h  ThreadJob.h  ThreadPool.h  Trace.h
IcarianNative/include/AI/: Navigation.h  NavigationBindings.h  NavigationMesh.h
IcarianNative/include/AppWindow/: AppWindow.h  GLFWAppWindow.h  HeadlessAppWindow.h
IcarianNative/include/Audio/: AudioEngine.h  AudioEngineBindings.h  AudioListenerBuffer.h  AudioMixerBuffer.h  AudioSourceBuffer.h  IcarianMiniaudio.h
IcarianNative/include/Audio/AudioClips/: AudioClip.h  OGGAudioClip.h  WAVAudioClip.h
IcarianNative/include/DataTypes/: Array.h  ChunkAllocator.h  RingAllocator.h  SpinLock.h  TArray.h  TLockArray.h  TLockObj.h  TNCArray.h  TStatic.h  TUMap.h  ThreadGuard.h
IcarianNative/include/Networking/: NetworkClient.h  NetworkManager.h  NetworkServer.h
IcarianNative/include/Physics/: IcBodyActivationListener.h  IcBroadPhaseLayerInterface.h  IcCharacterListener.h  IcContactListener.h  IcObjectLayerPairFilter.h  IcObjectVsBroadPhaseLayerFilter.h  IcPhysicsJobSystem.h  InterfaceLock.h  PhysicsEngine.h  PhysicsEngineBindings.h
IcarianNative/include/Rendering/: AnimationController.h  AnimationControllerBindings.h  AnimtionControllerBindings.h  CameraBuffer.h  Light.h  MaterialRenderStack.h  MeshRenderBuffer.h  RenderAssetStore.h  RenderAssetStoreBindings.h  RenderDeviceInfo.h  RenderEngine.h  RenderEngineBackend.h  SPIRVTools.h  ShaderBuffers.h  ShaderTable.h  SkinnedMeshRenderBuffer.h  TextureData.h  Viewport.h
IcarianNative/include/Rendering/Null/: NullRenderEngineBackend.h
IcarianNative/include/Rendering/UI/: CanvasBuffer.h  CanvasRendererBuffer.h  Font.h  ImageUIElement.h  TextUIElement.h  UIControl.h  UIControlBindings.h  UIElement.h
IcarianNative/include/Rendering/Video/: H264.h  VideoClip.h  VideoManager.h  VideoManagerBindings.h
IcarianNative/include/Rendering/Vulkan/: IcarianVulkanHeader.h  LibVulkan.h  VulkanCommandBuffer.h  VulkanComputeEngine.h  VulkanComputeEngineBindings.h  VulkanComputeLayout.h  VulkanComputeParticle.h  VulkanComputeParticle2D.h  VulkanComputePipeline.h  VulkanComputeShader.h  VulkanConstants.h  VulkanDepthCubeRenderTexture.h  VulkanDepthRenderTexture.h  VulkanGraphicsEngine.h  VulkanGraphicsEngineBindings.h  VulkanGraphicsParticle2D.h  VulkanLightBuffer.h  VulkanLightData.h  VulkanModel.h  VulkanParticleShaderGenerator.h  VulkanPipeline.h  VulkanPixelShader.h  VulkanPushPool.h  VulkanRenderCommand.h  VulkanRenderEngineBackend.h  VulkanRenderTexture.h  VulkanShader.h  VulkanShaderData.h  VulkanShaderStorageObject.h  VulkanSwapchain.h  VulkanTexture.h  VulkanTextureSampler.h  VulkanUniformBuffer.h  VulkanVertexShader.h  VulkanVideoTexture.h
IcarianNative/include/Runtime/: RuntimeFunction.h  RuntimeManager.h
IcarianNative/lib/: BuildIcarianNativeDependencies.h
IcarianNative/modules/: FileToHeader.cmake
IcarianNative/shaders/: AmbientLight.fpix  AmbientOcclusion.fpix  AmbientOcclusionFilter.fpix  Blend.fpix  DirectionalLight.fpix  PointLight.fpix  Post.fpix  PostAtmosphere.fpix  PostEmission.fpix  PostEmissionBlur.fpix  PostToneMap.fpix  Quad.vert  ShadowDirectionalLight.fpix  ShadowPointLight.fpix  ShadowSpotLight.fpix  SpotLight.fpix  UIImage.fpix  UIText.fpix  pointLight.fpix  post.fpix  ui.fvert  uiText.fpix
IcarianNative/src/: AnimationController.cpp  AnimationControllerBindings.cpp  Application.cpp  AssetLibrary.cpp  AudioEngine.cpp  AudioEngineBindings.cpp  Config.cpp  DeletionQueue.cpp  FileCache.cpp  Font.cpp  GLFWAppWindow.cpp  GamePad.cpp  H264.cpp  HeadlessAppWindow.cpp  IcBodyActivationListener.cpp  IcBroadPhaseLayerInterface.cpp  IcCharacterListener.cpp  IcContactListener.cpp  IcObjectLayerPairFilter.cpp  IcObjectVsBroadPhaseLayerFilter.cpp  IcPhysicsJobSystem.cpp  IcarianError.cpp  ImageUIElement.cpp  InputManager.cpp  Logger.cpp  MaterialRenderStack.cpp  Navigation.cpp  NavigationBindings.cpp  NavigationMesh.cpp  NetworkClient.cpp  NetworkManager.cpp  NetworkServer.cpp  NullRenderEngineBackend.cpp  OGGAudioClip.cpp  ObjectManager.cpp  PhysicsEngine.cpp  PhysicsEngineBindings.cpp  Profiler.cpp  Random.cpp  RenderAssetStore.cpp  (+49 more)
IcarianNative/src/Platform/Vulkan/: VulkanComputeEngine.cpp  VulkanComputeEngineBindings.cpp  VulkanComputeLayout.cpp  VulkanComputeParticle.cpp  VulkanComputePipeline.cpp  VulkanComputeShader.cpp  VulkanDepthCubeRenderTexture.cpp  VulkanDepthRenderTexture.cpp  VulkanGraphicsEngine.cpp  VulkanGraphicsEngineBindings.cpp  VulkanGraphicsParticle2D.cpp  VulkanLightData.cpp  VulkanModel.cpp  VulkanParticleShaderGenerator.cpp  VulkanPipeline.cpp  VulkanPixelShader.cpp  VulkanPushPool.cpp  VulkanRenderCommand.cpp  VulkanRenderEngineBackend.cpp  VulkanRenderTexture.cpp  VulkanShader.cpp  VulkanShaderData.cpp  VulkanShaderStorageObject.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanTextureSampler.cpp  VulkanUniformBuffer.cpp  VulkanVertexShader.cpp  VulkanVideoTexture.cpp
(+196 files in other folders)
